2023_02-14
* bb_sequence_info finalizada.
* Posibilidad de mejorar performance en bb_sequence_info se registra como enhancement en github issues.

2023_02-13
* bashrc_osx and bashrc_linux files updated to reflect 64 bits paths.

2023_02-10
* sequence_info improved performance. We sacrifice N90 for that.
* sequence_info fasta analysis complete.


2023_01-31
* Fixed bug in sequence_info that showed path to temporary file when script was read from STDIN.

2023_01-30
* Installation was modified to check for cpucores and cpu architecture.
* Appropriate installation directories created for different architectures. 
* Seqkit replaces Seqtk.
* "Seqkit stast" replaces "seqcounts" from EMBOSS in bb_count_seqs.
* "Seqkit stast" replaces "infoseq" from EMBOSS in bb_sequence_info.

2023-01-27
* bb_sequence_info now also determines n50 on fasta files.

2023-01-23
* Added a protein test file :apoe_prot.fasta
* Dummy function (file::guess_sequence_type) to guess if a file holds nucleotide or aminoacid data is added to lib/bb_native/file.sh.
* Added non production stable bb_sequence_info script.

2023-01-17
* bb_get_list renamed to bb_get_nr_list, still mantains the same double behaviour of displaying a nr list with or without frequencies.
* Added new script bb_extract_subset_from_list.
* New tagged version (0.1.3) released.

2023-01-12
* Fixed bug in bb_get_list when data came from a pipe and the "-f" option was present.

2023-01-12
* get_nr_list and get_freq_from_list now merged into a sigle script: bb_get_list (-f option to get frequencies).

2022-12-02
* bb_get_nr_list added to the set of scripts.
* A new mets.lst file added to the set of testdata.
* Improved feedback::help function. Now accepts two string variables.


2022-11-28
* Shebang changed to /usr/bin/env bash in all scripts.
* New feedback::help function added to feedback lib.
* Created structure to work with  bb_get_nr_list

2022-11-19
* Emboss added to the list of dependencies check.